[gd_scene load_steps=3 format=3 uid="uid://b8qjr6qhxw8n1"]

[ext_resource type="Script" path="res://game/monsters/Monster.gd" id="1_8p5g7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 32.0

[node name="Monster" type="CharacterBody2D"]
script = ExtResource("1_8p5g7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = 0.0
color = Color(0.8, 0.4, 0.4, 1)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -30.0
offset_top = -50.0
offset_right = 30.0
offset_bottom = -40.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="NameLabel" type="Label" parent="."]
offset_left = -40.0
offset_top = -70.0
offset_right = 40.0
offset_bottom = -50.0
text = "Monstre"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 35.0
text = "Niv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="monster_died" from="." to="." method="_on_monster_died"] 